二维码显示界面

--- a/AppCan_Project/asset-11655123/phone/zc/search.html
+++ b/AppCan_Project/asset-11655123/phone/zc/search.html
@@ -68,6 +68,10 @@
             <div class="button ub ub-ac bc-text-head ub-pc sc-btn uc-a1" v-on:click="reback" >取消</div>
         </div>
         </div></div>
+        <div class="uf sc-bg ubt sc-border-tab ub-f1 ub" data-control="FOOTER" id="Footer">
+            <div class="ub-f1 ub" data-control="TAB" id="Tab"></div>
+            <div class="ub ub-ac" data-control="BOX" id="Box_footer"></div>
+        </div>
         </div>
         </div>
         <script src="../js/appcan.js"></script>
