图片上传功能与后台对接

--- a/AppCan_Project/asset-11655123/phone/zc/qrcode.html
+++ b/AppCan_Project/asset-11655123/phone/zc/qrcode.html
@@ -12,15 +12,8 @@
         <link rel="stylesheet" href="../css/appcan.control.css">
         <!-- <link rel="stylesheet" href="qrcode/css/qrcode.css"> -->
         <style>
-        .qrcode-panel {
-            margin-top:100px;
-            text-align:center;
-            width:100%;
-        }
-        .qrcode-panel > img {
-            width : 60%;
-            margin : 50px auto;
-        }
+        .qrcode-panel {margin-top:100px; text-align:center; width:100%;}
+        .qrcode-panel > img {width : 60%; margin : 50px auto;}
         </style>
     </head>
     <body class="" ontouchstart>
@@ -31,7 +24,7 @@
                         <div class="ub-img1 icon-left ulev2">
                         </div>
                     </div>
-                    <h1 class="ut ub-f1 ulev-3 ut-s tx-c" tabindex="0">订单详情</h1>
+                    <h1 class="ut ub-f1 ulev-3 ut-s tx-c" tabindex="0">二维码信息</h1>
                     <div class="nav-btn" id="nav-right">
                         <div class="ub-img1 icon-more ulev2">
                         </div>
