--- a/AppCan_Project/asset-11655123/phone/index.html
+++ b/AppCan_Project/asset-11655123/phone/index.html
@@ -78,21 +78,37 @@ lv.set([{
     }, {
         title : "资产处理",
         id:"zccl"
+    }, {
+        title : "二维码扫描",
+        id : "qrcodeScan"
     }
 ]);
 lv.on("click",function(ele,obj,curEle){
     $("#zcck").on('click',function(){
         appcan.openWinWithUrl('zcck','zc/zcck.html');
-    })
+    });
     $("#zclz").on('click',function(){
         appcan.openWinWithUrl('zclz','zc/zclz.html');
-    })
-     $("#zcpd").on('click',function(){
+    });
+    $("#zcpd").on('click',function(){
         appcan.openWinWithUrl('zccl','zc/zcpd.html');
-    })
+    });
     $("#zccl").on('click',function(){
         appcan.openWinWithUrl('zcpd','zc/zcgl.html');
-    })
+    });
+    $("#qrcodeScan").on('click',function(){
+        uexScanner.open(function(err, data){
+            //包含type :"QR_CODE" ,code:扫描到的内容
+            var content = JSON.parse(data.code);
+            if("operateType" in content && "lzIds" in content && Array.isArray(content.lzIds)) {
+                //将扫描获得的信息放在前端缓存
+                localStorage.setItem("QrcodeContent", data.code);
+                appcan.openWinWithUrl('zcck_receive','zc/zcck/zcck_receive.html');
+            } else {
+                appcan.window.openToast('无效内容', '2000');
+            }
+        });
+    });
 })
     </script>
  </body>
