照片上传功能完成

--- a/AppCan_Project/asset-11655123/phone/zc/search.html
+++ b/AppCan_Project/asset-11655123/phone/zc/search.html
@@ -51,7 +51,7 @@
                 </thead>
                 <tbody>
                     <tr v-for="item in resultList" v-on:click="trSelect(item)" >
-                        <td>{{item.zcID}}</td>
+                        <td>{{item.zcid}}</td>
                         <td>{{item.mingch}}</td>
                         <td>{{item.lbie}}</td>
                     </tr>
