--- a/AppCan_Project/asset-11655123/phone/zc/zcck/zcck_confirm.html
+++ b/AppCan_Project/asset-11655123/phone/zc/zcck/zcck_confirm.html
@@ -10,7 +10,6 @@
         <link rel="stylesheet" href="../../css/ui-color.css">
         <link rel="stylesheet" href="../../css/appcan.icon.css">
         <link rel="stylesheet" href="../../css/appcan.control.css">
-        <link rel="stylesheet" href="zcck_confirm/css/zcck_confirm.css">
     </head>
     <body class="" ontouchstart>
         <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
@@ -20,14 +19,24 @@
                         <div class="ub-img1 icon-left ulev2">
                         </div>
                     </div>
-                    <h1 class="ut ub-f1 ulev-3 ut-s tx-c" tabindex="0">订单详情</h1>
+                    <h1 class="ut ub-f1 ulev-3 ut-s tx-c" tabindex="0">资产出库</h1>
                     <div class="nav-btn" id="nav-right">
                         <div class="ub-img1 icon-more ulev2">
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="bc-bg ub ub-ver ub-ac" data-control="FLEXBOXVER" id="ContentFlexVer" class="uinn-4a">I am the pop view.</div>
+            <div style="height : 300px;padding-top:100px">请交接货物, 提交交接信息</div>
+            <div class=" uinn uinn-at1">
+                <div class="button ub ub-ac bc-text-head ub-pc bc-btn"  id="submit">
+                    提交
+                </div>
+            </div>
+            <div class=" uinn uinn-at1">
+                <div class="button ub ub-ac bc-text-head ub-pc sc-btn"  id="cancel">
+                    取消
+                </div>
+            </div>
         </div>
         <script src="../../js/appcan.js"></script>
         <script src="../../js/appcan.control.js"></script>
@@ -38,6 +47,19 @@
 		<script src="../../js/appcan.slider.js"></script>
 		<script src="../../js/appcan.tab.js"></script>
 		<script src="../../js/appcan.treeview.js"></script>
-        <script src="zcck_confirm/js/zcck_confirm.js"></script>
+		<script src="../../js/common.js"></script>
+		<script>
+  $(function(){
+    var operateId = sys_common.getQueryString("operateId");
+    var login_user = localStorage.getItem("login_user");
+    $("#submit").on("click", function(){
+        $.get(sys_common.rootPath + sys_common.contextPath + "lz/finished", 
+            {operateId : operateId, bgrId: (login_user ? login_user.uuid : null)}, 
+            function(){
+                alert("操作成功");
+            });
+    })
+  });
+		</script>
     </body>
 </html>
