二维码数据校验调整

--- a/AppCan_Project/asset-11655123/phone/login.html
+++ b/AppCan_Project/asset-11655123/phone/login.html
@@ -42,28 +42,20 @@
                                     <div class=" uinput ub ub-f1">
                                         <div class="uinn fa fa-lock sc-text"></div>
                                         <input placeholder="密码" type="password" class="umw4 ub-f1" id="pwd" name="pwd" data-bind="value:pwd">
-
                                     </div>
                                 </div>
                             </div>
                             <div class="ub ub-ver">
-                                <div class="ub ub-pe uinn-a6 sc-text-active ulev-4">
-                                                                                                          忘记密码
-                                </div>
+                                <div class="ub ub-pe uinn-a6 sc-text-active ulev-4">忘记密码</div>
                                 <div class="uinn-at1">
-                                    <div class="button ub ub-ac bc-text-head ub-pc bc-btn uc-a1" id="submit">
-                                                                                                                  登录
-                                    </div>
+                                    <div class="button ub ub-ac bc-text-head ub-pc bc-btn uc-a1" id="submit">登录</div>
                                 </div>
                                 <div class="uinn-at2 ub sc-text-active ulev-4">
-                                    <div class="ub-f1">
-                                                                                                                     立即注册
-                                    </div>
-                                    <div class="ub-f1 tx-r">
-                                                                                                                       无账号快捷登录
-                                    </div>
+                                    <div class="ub-f1">立即注册</div>
+                                    <div class="ub-f1 tx-r">无账号快捷登录</div>
                                 </div>
                             </div>
+                            测试用户 : MA1 MK1 MK2 , 密码都是123
                             <button type="submit"class="uinvisible"></button>
                         </form>
 
