样式适配调整

--- a/AppCan_Project/asset-11655123/phone/zc/zcck/zcck_confirm.html
+++ b/AppCan_Project/asset-11655123/phone/zc/zcck/zcck_confirm.html
@@ -16,39 +16,44 @@
             <div class="uh bc-head  ubb bc-border" data-control="HEADER" id="Header">
                 <div class="ub">
                     <div class="nav-btn" id="nav-left">
-                        <div class="ub-img1 icon-left ulev2">
-                        </div>
+                        <div class="fa fa-1g ub-img1"></div>
                     </div>
                     <h1 class="ut ub-f1 ulev-3 ut-s tx-c" tabindex="0">资产出库</h1>
                     <div class="nav-btn" id="nav-right">
-                        <div class="ub-img1 icon-more ulev2">
-                        </div>
+                        <div class="fa  fa-1g  ub-img1"></div>
                     </div>
                 </div>
             </div>
-            <div style="height : 300px;padding-top:100px">请交接货物, 提交交接信息</div>
-            <div class=" uinn uinn-at1">
-                <div class="button ub ub-ac bc-text-head ub-pc bc-btn"  id="submit">
-                    提交
-                </div>
-            </div>
-            <div class=" uinn uinn-at1">
-                <div class="button ub ub-ac bc-text-head ub-pc sc-btn"  id="cancel">
-                    取消
-                </div>
-            </div>
+            <div class="" data-control="CONTENT" id="ScrollContent">
+  <div class="scrollbox">
+    <div class="box_bounce ub ub-ver ub-pc">
+      <div class="ub-f1">
+      </div>
+      <div class="bounce_status">下拉更新......</div>
+      <div class="bounce_status">松手更新......</div>
+      <div class="bounce_status">更新中......</div>
+    </div>
+        <div>请交接货物, 提交交接信息</div>
+        <div class="uinn uinn-at1" style="margin: 10px 20px;">
+            <div class="button ub ub-ac bc-text-head ub-pc bc-btn uc-a1" id="submit">提交</div>
+        </div>
+        <div class="uinn uinn-at1" style="margin: 10px 20px;">
+            <div class="button ub ub-ac bc-text-head ub-pc bc-btn uc-a1" id="cancel">取消</div>
+        </div>
+        </div>
+        </div>
         </div>
         <script src="../../js/appcan.js"></script>
         <script src="../../js/appcan.control.js"></script>
         <script src="../../js/appcan.scrollbox.js"></script>
         <script src="../../js/template.import.js"></script>
-		<script src="../../js/appcan.listview.js"></script>
-		<script src="../../js/appcan.optionList.js"></script>
-		<script src="../../js/appcan.slider.js"></script>
-		<script src="../../js/appcan.tab.js"></script>
-		<script src="../../js/appcan.treeview.js"></script>
-		<script src="../../js/common.js"></script>
-		<script>
+        <script src="../../js/appcan.listview.js"></script>
+        <script src="../../js/appcan.optionList.js"></script>
+        <script src="../../js/appcan.slider.js"></script>
+        <script src="../../js/appcan.tab.js"></script>
+        <script src="../../js/appcan.treeview.js"></script>
+        <script src="../../js/common.js"></script>
+        <script>
 appcan.ready(function() {
     var operateId = appcan.locStorage.getVal("operateId");
     var userJson = appcan.locStorage.getVal("login_user");
@@ -66,6 +71,6 @@ appcan.ready(function() {
         });
     });
 });
-		</script>
+        </script>
     </body>
 </html>
