--- a/AppCan_Project/asset-11655123/phone/zc/count.html
+++ b/AppCan_Project/asset-11655123/phone/zc/count.html
@@ -10,51 +10,65 @@
         <link rel="stylesheet" href="../css/ui-color.css">
         <link rel="stylesheet" href="../css/appcan.icon.css">
         <link rel="stylesheet" href="../css/appcan.control.css">
-        <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
     </head>
     <body class="" ontouchstart>
         <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
             <div class="uh bc-head  ubb bc-border" data-control="HEADER" id="Header">
                 <div class="ub">
                     <div class="nav-btn" id="nav-left">
-                        <div class="ub-img1 icon-left ulev2">
-                        </div>
+                        <div class="fa fa-1g ub-img1"></div>
                     </div>
                     <h1 class="ut ub-f1 ulev-3 ut-s tx-c" tabindex="0">资产出库</h1>
                     <div class="nav-btn" id="nav-right">
-                        <div class="ub-img1 icon-more ulev2">
-                        </div>
+                        <div class="fa  fa-1g  ub-img1"></div>
                     </div>
                 </div>
             </div>
-            <table class="table table-striped" style="margin-top:100px">
-            <tbody>
-                <tr>
-                    <th>出库记录编号</th>
-                    <td>{{countData.code}}</td>
-                </tr>
-                <tr>
-                    <th>资产种类数量</th>
-                    <td>{{countData.typeCount}}</td>
-                </tr>
-                <tr>
-                    <th>领用人</th>
-                    <td>{{countData.lyr}}</td>
-                </tr>
-                <tr>
-                    <th>备注</th>
-                    <td>{{countData.bz}}</td>
-                </tr>
-                <tr>
-                    <th>日期</th>
-                    <td>{{countData.rq}}</td>
-                </tr>
-                <tr>
-                    <th>照片数量</th>
-                    <td>{{countData.photoNum}}</td>
-                </tr>
-            </tbody>
-            </table>
+            <div class="" data-control="CONTENT" id="ScrollContent">
+  <div class="scrollbox">
+    <div class="box_bounce ub ub-ver ub-pc">
+      <div class="ub-f1">
+      </div>
+      <div class="bounce_status">下拉更新......</div>
+      <div class="bounce_status">松手更新......</div>
+      <div class="bounce_status">更新中......</div>
+    </div>
+        
+        <div>
+            <div class="ub ub-hor ub-f1 ulev-1 uinn ub-ac umh4" >
+                <div class="ub-f1 ub-con ub-ac ub-pc ub">出库记录编号</div>
+                <div class="umw1"></div>
+                <div class="ub-f1 ub-con ub-ac ub-pc ub">{{countData.code}}</div>
+            </div>
+            <div class="ub ub-hor ub-f1 ulev-1 uinn ub-ac umh4" >
+                <div class="ub-f1 ub-con ub-ac ub-pc ub">资产种类数量</div>
+                <div class="umw1"></div>
+                <div class="ub-f1 ub-con ub-ac ub-pc ub">{{countData.typeCount}}</div>
+            </div>
+            <div class="ub ub-hor ub-f1 ulev-1 uinn ub-ac umh4" >
+                <div class="ub-f1 ub-con ub-ac ub-pc ub">领用人</div>
+                <div class="umw1"></div>
+                <div class="ub-f1 ub-con ub-ac ub-pc ub">{{countData.lyr}}</div>
+            </div>
+            <div class="ub ub-hor ub-f1 ulev-1 uinn ub-ac umh4" >
+                <div class="ub-f1 ub-con ub-ac ub-pc ub">备注</div>
+                <div class="umw1"></div>
+                <div class="ub-f1 ub-con ub-ac ub-pc ub">{{countData.bz}}</div>
+            </div>
+            <div class="ub ub-hor ub-f1 ulev-1 uinn ub-ac umh4" >
+                <div class="ub-f1 ub-con ub-ac ub-pc ub">日期</div>
+                <div class="umw1"></div>
+                <div class="ub-f1 ub-con ub-ac ub-pc ub">{{countData.rq}}</div>
+            </div>
+            <div class="ub ub-hor ub-f1 ulev-1 uinn ub-ac umh4" >
+                <div class="ub-f1 ub-con ub-ac ub-pc ub">照片数量</div>
+                <div class="umw1"></div>
+                <div class="ub-f1 ub-con ub-ac ub-pc ub">{{countData.photoNum}}</div>
+            </div>
+        </div>
+        
+        </div>
+        </div>
         </div>
         <script src="../js/appcan.js"></script>
         <script src="../js/appcan.control.js"></script>
@@ -65,8 +79,8 @@
         <script src="../js/appcan.slider.js"></script>
         <script src="../js/appcan.tab.js"></script>
         <script src="../js/appcan.treeview.js"></script>
-        <script src="../js/common.js"></script>
         <script src="../js/vue/vue.js"></script>
+        <script src="../js/common.js"></script>
         <script>
 appcan.ready(function() {
 var operateId = appcan.locStorage.getVal("operateId");
