--- a/AppCan_Project/asset-11655123/phone/zc/zcck/zcck_list.html
+++ b/AppCan_Project/asset-11655123/phone/zc/zcck/zcck_list.html
@@ -10,57 +10,68 @@
         <link rel="stylesheet" href="../../css/ui-color.css">
         <link rel="stylesheet" href="../../css/appcan.icon.css">
         <link rel="stylesheet" href="../../css/appcan.control.css">
-        <link rel="stylesheet" href="../../bootstrap/css/bootstrap.css">
     </head>
     <body class="" ontouchstart>
         <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
             <div class="uh bc-head  ubb bc-border" data-control="HEADER" id="Header">
                 <div class="ub">
                     <div class="nav-btn" id="nav-left">
-                        <div class="ub-img1 icon-left ulev2">
-                        </div>
+                        <div class="fa fa-1g ub-img1"></div>
                     </div>
-                    <h1 class="ut ub-f1 ulev-3 ut-s tx-c" tabindex="0">出库清单</h1>
+                    <h1 class="ut ub-f1 ulev-3 ut-s tx-c" tabindex="0">查询结果</h1>
                     <div class="nav-btn" id="nav-right">
-                        <div class="ub-img1 icon-more ulev2">
-                        </div>
+                        <div class="fa  fa-1g  ub-img1"></div>
                     </div>
                 </div>
             </div>
-            
-            <table class="table table-striped" style="margin-top:100px">
-            <thead >
-                <th>序号</th>
-                <th>ID</th>
-            </thead>
-            <tbody>
-                <tr v-for="(item,index) in zcList" >
-                    <td>{{index+1}}</td>
-                    <td>{{item}}</td>
-                </tr>
-            </tbody>
-            </table>
-            <div class="uinn uinn-at1">
-                <div class="button ub ub-ac bc-text-head ub-pc bc-btn uc-a1" v-on:click="toQrcode">生成二维码</div>
+            <div class="" data-control="CONTENT" id="ScrollContent">
+  <div class="scrollbox">
+    <div class="box_bounce ub ub-ver ub-pc">
+      <div class="ub-f1">
+      </div>
+      <div class="bounce_status">下拉更新......</div>
+      <div class="bounce_status">松手更新......</div>
+      <div class="bounce_status">更新中......</div>
+    </div>
+        <div class="ub ub-hor ub-f1 ulev-1 uinn ub-ac c-gra1 txtcolor">
+            <div class="ub-f1 ub-con ub-ac ub-pc ub">
+                序号
             </div>
-            <div class="uinn uinn-at1">
-                <div class="button ub ub-ac bc-text-head ub-pc bc-btn uc-a1" v-on:click="continueSearch" >继续检索添加</div>
+            <div class="umw1"></div>
+            <div class="ub-f1 ub-con ub-ac ub-pc ub">
+                ID
             </div>
-            <div class="uinn uinn-at1">
-                <div class="button ub ub-ac bc-text-head ub-pc sc-btn uc-a1" >对方无法扫码</div>
+        </div>
+        <div>
+            <div class="ub ub-hor ub-f1 ulev-1 uinn ub-ac umh4" v-for="(item,index) in zcList" >
+                <div class="ub-f1 ub-con ub-ac ub-pc ub">{{index+1}}</div>
+                <div class="umw1"></div>
+                <div class="ub-f1 ub-con ub-ac ub-pc ub">{{item}}</div>
             </div>
+        </div>
+        <div class="uinn uinn-at1">
+            <div class="button ub ub-ac bc-text-head ub-pc bc-btn uc-a1" v-on:click="toQrcode">生成二维码</div>
+        </div>
+        <div class="uinn uinn-at1">
+            <div class="button ub ub-ac bc-text-head ub-pc bc-btn uc-a1" v-on:click="continueSearch" >继续检索添加</div>
+        </div>
+        <div class="uinn uinn-at1">
+            <div class="button ub ub-ac bc-text-head ub-pc sc-btn uc-a1" >对方无法扫码</div>
+        </div>
+        </div>
+        </div>
         </div>
         <script src="../../js/appcan.js"></script>
         <script src="../../js/appcan.control.js"></script>
         <script src="../../js/appcan.scrollbox.js"></script>
         <script src="../../js/template.import.js"></script>
-		<script src="../../js/appcan.listview.js"></script>
-		<script src="../../js/appcan.optionList.js"></script>
-		<script src="../../js/appcan.slider.js"></script>
-		<script src="../../js/appcan.tab.js"></script>
-		<script src="../../js/appcan.treeview.js"></script>
-		<script src="../../js/vue/vue.js"></script>
-		<script src="../../js/common.js"></script>
+        <script src="../../js/appcan.listview.js"></script>
+        <script src="../../js/appcan.optionList.js"></script>
+        <script src="../../js/appcan.slider.js"></script>
+        <script src="../../js/appcan.tab.js"></script>
+        <script src="../../js/appcan.treeview.js"></script>
+        <script src="../../js/vue/vue.js"></script>
+        <script src="../../js/common.js"></script>
         <script src="js/zcck_list.js"></script>
     </body>
 </html>
