--- a/AppCan_Project/asset-11655123/phone/login.html
+++ b/AppCan_Project/asset-11655123/phone/login.html
@@ -10,16 +10,12 @@
         <link rel="stylesheet" href="css/ui-color.css">
         <link rel="stylesheet" href="css/appcan.icon.css">
         <link rel="stylesheet" href="css/appcan.control.css">
-        <link rel="stylesheet" href="login1/css/login1.css">
+        <link rel="stylesheet" href="./css/index.css">
     </head>
     <body class="" ontouchstart>
         <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
             <div class="uh bc-head  ubb bc-border" data-control="HEADER" id="Header">
                 <div class="ub">
-                    <div class="nav-btn" id="nav-left">
-                        <div class="ub-img1 icon-left ulev2">
-                        </div>
-                    </div>
                     <h1 class="ut ub-f1 ulev-3 ut-s tx-c" tabindex="0">登录</h1>
                     <div class="nav-btn" id="nav-right">
                         <div class="fa  fa-1g  ub-img1">
@@ -28,7 +24,7 @@
                 </div>
             </div>
             <div class="bc-bg ub ub-ver ub-ac ub-con" data-control="FLEXBOXVER" id="ContentFlexVer">
-                <div class="ub ub-ver uinn-a3 ub-fv ub-fh">
+                <div class="ub ub-ver uinn-a3 ub-fv ub-fh" style="padding-top:3em">
                     <div class="ub ub-ver uinn-a4">
                         <form >
                             <div class="umar-a uba bc-border c-wh">
