删除无用文件

--- a/AppCan_Project/asset-11655123/phone/login.html
+++ b/AppCan_Project/asset-11655123/phone/login.html
@@ -3,24 +3,19 @@
     <head>
         <title></title>
         <meta charset="utf-8">
-        <meta name="viewport" content="target-densitydpi=device-dpi, width=device-width, initial-scale=1, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
         <link rel="stylesheet" href="css/fonts/font-awesome.min.css">
         <link rel="stylesheet" href="css/ui-box.css">
         <link rel="stylesheet" href="css/ui-base.css">
         <link rel="stylesheet" href="css/ui-color.css">
         <link rel="stylesheet" href="css/appcan.icon.css">
         <link rel="stylesheet" href="css/appcan.control.css">
-        <link rel="stylesheet" href="./css/index.css">
     </head>
-    <body class="" ontouchstart>
+    <body ontouchstart>
         <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
             <div class="uh bc-head  ubb bc-border" data-control="HEADER" id="Header">
                 <div class="ub">
                     <h1 class="ut ub-f1 ulev-3 ut-s tx-c" tabindex="0">登录</h1>
-                    <div class="nav-btn" id="nav-right">
-                        <div class="fa  fa-1g  ub-img1">
-                        </div>
-                    </div>
                 </div>
             </div>
             <div class="bc-bg ub ub-ver ub-ac ub-con" data-control="FLEXBOXVER" id="ContentFlexVer">
@@ -42,17 +37,17 @@
                                 </div>
                             </div>
                             <div class="ub ub-ver">
-                                <div class="ub ub-pe uinn-a6 sc-text-active ulev-4">忘记密码</div>
-                                <div class="uinn-at1">
+                                
+                                <div class="uinn uinn-at1">
+                                    <div class="ub ub-pe uinn-a6 sc-text-active ulev-4">忘记密码</div>
                                     <div class="button ub ub-ac bc-text-head ub-pc bc-btn uc-a1" id="submit">登录</div>
-                                </div>
-                                <div class="uinn-at2 ub sc-text-active ulev-4">
-                                    <div class="ub-f1">立即注册</div>
-                                    <div class="ub-f1 tx-r">无账号快捷登录</div>
+                                    <div class="uinn-at2 ub sc-text-active ulev-4">
+                                        <div class="ub-f1">立即注册</div>
+                                        <div class="ub-f1 tx-r">无账号快捷登录</div>
+                                    </div>
+                                    <div>测试用户 : MA1 MK1 MK2 , 密码都是123</div>
                                 </div>
                             </div>
-                            测试用户 : MA1 MK1 MK2 , 密码都是123
-                            <button type="submit"class="uinvisible"></button>
                         </form>
 
                     </div>
@@ -69,8 +64,7 @@
 		<script src="js/appcan.slider.js"></script>
 		<script src="js/appcan.tab.js"></script>
 		<script src="js/appcan.treeview.js"></script>
-		<script src="js/base.js"></script>
 		<script src="js/common.js"></script>
-        <script src="login1/js/login1.js"></script>
+        <script src="js/login.js"></script>
     </body>
 </html>
