--- a/AppCan_Project/asset-11655123/phone/zc/search.html
+++ b/AppCan_Project/asset-11655123/phone/zc/search.html
@@ -3,7 +3,7 @@
     <head>
         <title></title>
         <meta charset="utf-8">
-        <meta name="viewport" content="target-densitydpi=device-dpi, width=device-width, initial-scale=1, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
         <link rel="stylesheet" href="../css/fonts/font-awesome.min.css">
         <link rel="stylesheet" href="../css/ui-box.css">
         <link rel="stylesheet" href="../css/ui-base.css">
@@ -16,7 +16,7 @@
         }
         </style>
     </head>
-    <body class="" ontouchstart>
+    <body ontouchstart>
         <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
             <div class="uh bc-head  ubb bc-border" data-control="HEADER" id="Header">
                 <div class="ub">
@@ -29,7 +29,7 @@
                     </div>
                 </div>
             </div>
-            <div class="" data-control="CONTENT" id="ScrollContent">
+            <div data-control="CONTENT" id="ScrollContent">
   <div class="scrollbox">
     <div class="box_bounce ub ub-ver ub-pc">
       <div class="ub-f1">
@@ -84,6 +84,6 @@
         <script src="../js/appcan.treeview.js"></script>
         <script src="../js/vue/vue.js"></script>
         <script src="../js/common.js"></script>
-        <script src="search/search.js"></script>
+        <script src="js/search.js"></script>
     </body>
 </html>
