--- a/AppCan_Project/asset-11655123/phone/zc/zcck/zcck_receive.html
+++ b/AppCan_Project/asset-11655123/phone/zc/zcck/zcck_receive.html
@@ -3,7 +3,7 @@
     <head>
         <title></title>
         <meta charset="utf-8">
-        <meta name="viewport" content="target-densitydpi=device-dpi, width=device-width, initial-scale=1, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
         <link rel="stylesheet" href="../../css/fonts/font-awesome.min.css">
         <link rel="stylesheet" href="../../css/ui-box.css">
         <link rel="stylesheet" href="../../css/ui-base.css">
@@ -23,7 +23,7 @@
         }
         </style>
     </head>
-    <body class="" ontouchstart>
+    <body ontouchstart>
         <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
             <div class="uh bc-head  ubb bc-border" data-control="HEADER" id="Header">
                 <div class="ub">
@@ -36,15 +36,8 @@
                     </div>
                 </div>
             </div>
-            <div class="" data-control="CONTENT" id="ScrollContent">
+            <div data-control="CONTENT" id="ScrollContent">
   <div class="scrollbox">
-    <div class="box_bounce ub ub-ver ub-pc">
-      <div class="ub-f1">
-      </div>
-      <div class="bounce_status">下拉更新......</div>
-      <div class="bounce_status">松手更新......</div>
-      <div class="bounce_status">更新中......</div>
-    </div>
         <div class="ub ub-hor ub-f1 ulev-1 uinn ub-ac c-gra1 txtcolor">
             <div class="ub-f1 ub-con ub-ac ub-pc ub">
                 编码
@@ -78,17 +71,17 @@
         <form action="" id="uploadForm" method="post" enctype="multipart/form-data" style="display:none;">
             <input type="file" id="uploadPhoto" name="uploadPhoto" v-on:change="selectFile"/>
         </form>
-        <div class="uinn-at1" style="margin: 10px 20px;">
+        <div class="uinn uinn-at1" >
             <div class="button ub ub-ac bc-text-head ub-pc bc-btn uc-a1" v-on:click="takePhoto">拍照</div>
         </div>
-        <div class="uinn-at1" style="margin: 10px 20px;">
+        <div class="uinn uinn-at1" >
             <div class="button ub ub-ac bc-text-head ub-pc bc-btn uc-a1" v-on:click="uploadPic">上传图片</div>
         </div>
-        <div class="uinn-at1" style="margin: 10px 20px;">
+        <div class="uinn uinn-at1" >
             <div class="button ub ub-ac bc-text-head ub-pc bc-btn uc-a1" v-on:click="finished">完成</div>
         </div>
-        <div class="uinn-at1" style="margin: 10px 20px;">
-            <div class="button ub ub-ac bc-text-head ub-pc bc-btn uc-a1" v-on:click="cancel">取消</div>
+        <div class="uinn uinn-at1" >
+            <div class="button ub ub-ac bc-text-head ub-pc sc-btn uc-a1" v-on:click="cancel">取消</div>
         </div>
         </div>
         </div>
