--- a/AppCan_Project/asset-11655123/phone/zc/zccl.html
+++ b/AppCan_Project/asset-11655123/phone/zc/zccl.html
@@ -19,7 +19,7 @@
                     <div class="nav-btn" id="nav-left" v-on:click="backView">
                         <div class="fa fa-1g ub-img1 fa-chevron-left"></div>
                     </div>
-                    <h1 class="ut ub-f1 ulev-3 ut-s tx-c" tabindex="0">出库流程</h1>
+                    <h1 class="ut ub-f1 ulev-3 ut-s tx-c" tabindex="0">处理流程</h1>
                     <div class="nav-btn" id="nav-right">
                         <div class="fa  fa-1g  ub-img1"></div>
                     </div>
@@ -75,7 +75,7 @@
                         <div class="button ub ub-ac bc-text-head ub-pc bc-btn uc-a1"  v-on:click="search">查询</div>
                     </div>
                     <div class=" uinn uinn-at1">
-                        <div class="button ub ub-ac bc-text-head ub-pc sc-btn uc-a1"  v-on:click="backView"> 取消</div>
+                        <div class="button ub ub-ac bc-text-head ub-pc sc-btn uc-a1"  v-on:click="backView">取消</div>
                     </div>
                 </div>
               </form>
@@ -87,13 +87,12 @@
         <script src="../js/appcan.control.js"></script>
         <script src="../js/appcan.scrollbox.js"></script>
         <script src="../js/template.import.js"></script>
-		<script src="../js/appcan.listview.js"></script>
-		<script src="../js/appcan.optionList.js"></script>
-		<script src="../js/appcan.slider.js"></script>
-		<script src="../js/appcan.tab.js"></script>
-		<script src="../js/appcan.treeview.js"></script>
-		<script src="../js/common.js"></script>
-        <script src="../js/vue/vue.js"></script>
-        <script src="js/zichan.js"></script>
+        <script src="../js/appcan.listview.js"></script>
+        <script src="../js/appcan.optionList.js"></script>
+        <script src="../js/appcan.slider.js"></script>
+        <script src="../js/appcan.tab.js"></script>
+        <script src="../js/appcan.treeview.js"></script>
+        <script src="../js/common.js"></script>
+        <script src="../js/vue/vue.js"></script> 
     </body>
 </html>
